# MoBI-AV

./: .gitignore  README.md  audio_recorder.py  config.json  gui.py  lsl_utils.py  pyproject.toml  recorder_core.py  requirements.txt  run.py  video_recorder.py
