[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video_audio_stream"
version = "0.1.0"
description = "Audio and video streaming application"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pyaudio",
    "opencv-python",
    "pylsl",
]